--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "This is a template repo for creating node-based projects",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --mode development --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
